# chip8

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
src/: application.c  application.h  audio.c  audio.h  instructions.c  instructions.h  interpreter.c  interpreter.h  main.c  utils.c  utils.h  vm.c  vm.h
